--- a/reviews/templates/resultado_pesquisa.html
+++ b/reviews/templates/resultado_pesquisa.html
@@ -9,17 +9,13 @@
         img      {opacity: 0.3; margin-left: auto; margin-right: auto; display: block; width: 15%;}
         .italicado {font-style: italic;}
     </style>
-
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Bem vindo ao LivreTo</title>
+    <title>Resultados da busca: {{ termo_busca }}</title>
 </head>
 <body>
-    <br/>
-    <br/>
-    <br/>
-    <h1>Bem vindo ao Livre<i>To</i></h1>
+    <h1>Resultados da pesquisa por : <em> {{ termo_busca }}</em></h1>
     
 </body>
 </html>
