--- a/reviews/templates/reviews/base.html
+++ b/reviews/templates/reviews/base.html
@@ -20,6 +20,9 @@
     <br/>
     <br/>
     <h1>Bem vindo ao Livre<i>To</i></h1>
+    {% block content %}
+    <h1>Lalala</h1>
+    {% endblock content %}
     
 </body>
 </html>
