--- a/reviews/templates/reviews/child.html
+++ b/reviews/templates/reviews/child.html
@@ -1,4 +1,4 @@
 {% extends 'reviews/base.html' %}
 {% block content %}
-<h1>How are you doing?</h1>
+<h1>All nice herdado</h1>
 {% endblock content %}
