--- a/reviews/templates/reviews/books_list.html
+++ b/reviews/templates/reviews/books_list.html
@@ -1,39 +1,25 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Listagem dos livros</title>
-</head>
-    <body>
-        <h1>Aplicação de analise de livros</h1>
+{% extends 'base.html' %}
 
-        <hr>
-
-        <ul>
-            {% for item in book_list %}
-            <li>
-                <span>Titulo: <span> {{ item.book.title }}</span></span>
-                <br>
-                <span>Editora: <span> {{ item.book.publisher }}</span></span>
-                <br>
-                <span>Data de publicação: <span> {{ item.book.publication_date }}</span></span>
-                <br>
-                <span>Classificação: <span> {{ item.book_rating }}</span></span>
-                <br>
-                <span>Total de avaliações: <span> {{ item.number_of_reviews }}</span></span>
-                <br>
-
-                {% if item.book_rating is null %}
-                    <span>Forneça uma classificação e escreva a primeira avaliação para este livro.</span>
-                {% endif %}
-
-            </li>
-
-        <br>
-            {% endfor %}
-        </ul>
-
-    </body>
-</html>
+{% block content %}
+<ul class="list-group">
+  {% for item in book_list %}
+  <li class="list-group-item">
+      <span class="text-info">Titulo: </span> <span>{{ item.book.title }}</span>
+      <br>
+      <span class="text-info">Editora: </span><span>{{ item.book.publisher }}</span>
+      <br>
+      <span class="text-info">Data de publicação: </span><span>{{ item.book.publication_date }}</span>
+      <br>
+      <span class="text-info">Classificação: </span><span class="badge badge-primary badge-pill">{{ item.book_rating }}</span>
+      <br>
+      <span class="text-info">Total de avaliações: </span><span>{{ item.number_of_reviews }}</span>
+      <br>
+      {% if item.book_rating is null %}
+      <span class="text-secondary">Forneça uma classificação e escreva a primeira avaliação para este livro.</span>
+      <br>
+      {% endif %}
+      <a class="btn btn-primary btn-sm active" role="button" aria-pressed="true" href="/book/{{ item.book.id }}/">Reviews</a></li>
+  </li>
+  {% endfor %}
+</ul>
+{% endblock %}
